# chitchat

./: .gitignore  README.md  pyproject.toml
chitchat/: appy.py  chat.py  main.py
chitchat/static/: styles.css
